m4/src/snapshots/m4__lexer__test__parse_stream_symbols_evaluation_order.snap
---
source: m4/src/lexer.rs
expression: "snapshot_symbols_as_stream(ParseConfig::default(), &f)"
---
STDOUT:
Macro(
    Macro {
        input: "dnl",
        name: MacroName(
            "dnl",
        ),
        args: [],
    },
)
Text(
    " ",
)
Text(
    "demonstrates ",
)
Text(
    "that ",
)
Text(
    "evaluation ",
)
Text(
    "of ",
)
Text(
    "macro ",
)
Text(
    "arguments ",
)
Text(
    "is ",
)
Text(
    "deferred ",
)
Text(
    "until ",
)
Text(
    "it ",
)
Text(
    "is ",
)
Text(
    "called.",
)
Newline
Macro(
    Macro {
        input: "define(hello, error)",
        name: MacroName(
            "define",
        ),
        args: [
            [
                Text(
                    "hello",
                ),
            ],
            [
                Text(
                    "error",
                ),
            ],
        ],
    },
)
Macro(
    Macro {
        input: "dnl",
        name: MacroName(
            "dnl",
        ),
        args: [],
    },
)
Newline
Macro(
    Macro {
        input: "define(m2, m1(hello) m1($1))",
        name: MacroName(
            "define",
        ),
        args: [
            [
                Text(
                    "m2",
                ),
            ],
            [
                Text(
                    "m1",
                ),
                Text(
                    "(",
                ),
                Text(
                    "hello",
                ),
                Text(
                    ")",
                ),
                Text(
                    " ",
                ),
                Text(
                    "m1",
                ),
                Text(
                    "(",
                ),
                Text(
                    "$",
                ),
                Text(
                    "1",
                ),
                Text(
                    ")",
                ),
            ],
        ],
    },
)
Macro(
    Macro {
        input: "dnl",
        name: MacroName(
            "dnl",
        ),
        args: [],
    },
)
Text(
    " ",
)
Newline
Macro(
    Macro {
        input: "define(hello, goodbye)",
        name: MacroName(
            "define",
        ),
        args: [
            [
                Text(
                    "hello",
                ),
            ],
            [
                Text(
                    "goodbye",
                ),
            ],
        ],
    },
)
Macro(
    Macro {
        input: "dnl",
        name: MacroName(
            "dnl",
        ),
        args: [],
    },
)
Newline
Macro(
    Macro {
        input: "define(m1, ``m1'' $1)",
        name: MacroName(
            "define",
        ),
        args: [
            [
                Text(
                    "m1",
                ),
            ],
            [
                Quoted(
                    Quoted {
                        contents: "`m1'",
                    },
                ),
                Text(
                    "' $",
                ),
                Text(
                    "1",
                ),
            ],
        ],
    },
)
Macro(
    Macro {
        input: "dnl",
        name: MacroName(
            "dnl",
        ),
        args: [],
    },
)
Newline
Text(
    "m2",
)
Text(
    "(",
)
Text(
    "hi",
)
Text(
    ")",
)
Newline

STDERR:
